Create all pages

--- a/src/404.html
+++ b/src/404.html
@@ -114,7 +114,17 @@
 		</nav>
 
 		<main class="main">
-			<!-- Page content -->
+			<section class="not-found">
+				<div class="not-found__container container">
+					<div class="not-found__body">
+						<img class="not-found__number" src="./assets/images/404.svg" />
+						<div class="not-found__content">
+							<p>Такой страницы не существует. <br>Вернитесь на главную</p>
+							<a class="button" href="/">Вернуться на главную</a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
