--- a/src/blog.html
+++ b/src/blog.html
@@ -345,6 +345,24 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Форма обратной связи -->
+			<section class="callback-section no-margin-bottom">
+				<div class="callback-section__container container">
+					<form class="callback-section__form callback-form" action="#">
+						<h2 class="callback-form__heading heading-3">Получите экологичную офисную мебель всего за 10 дней</h2>
+						<p class="callback-form__description">
+							Мы используем только сертифицированные материалы и инновационные технологии, чтобы создать идеальное рабочее пространство для вашего бизнеса.
+						</p>
+						<div class="callback-form__body">
+							<input class="callback-form__input input" type="text" name="name" placeholder="Введите имя" required>
+							<input class="callback-form__input input" type="tel" name="phone" placeholder="Введите телефон" required>
+							<button class="callback-form__button button" type="submit">Отправить заявку</button>
+						</div>
+						<p class="callback-form__agreement">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных данных</a></p>
+					</form>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
