--- a/src/delivery.html
+++ b/src/delivery.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Статья</title>
+	<title>Доставка</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -115,71 +115,49 @@
 
 		<ul class="bread-crumbs container">
 			<li><a href="/">Главная</a></li>
-			<li><a href="/">Блог</a></li>
-			<li>Выбор идеального офисного кресла: На что обратить внимание?</li>
+			<li>Доставка</li>
 		</ul>
 
 		<main class="main">
-			<article class="blog-article">
-				<div class="blog-article__container container">
-					<h1 class="blog-article__heading heading-1">Выбор идеального офисного кресла: На что обратить внимание?</h1>
-					<img class="blog-article__image" src="./assets/images/service-image-1.jpg" alt="">
-					<span class="blog-article__date">21.09.2024</span>
-					<div class="blog-article__text">
-						<h2>первый шаг</h2>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-						<h3>Второй шаг</h3>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
+			<!-- Доставка -->
+			<section class="delivery-section">
+				<div class="delivery-section__container container">
+					<div class="delivery-section__head">
+						<h1 class="delivery-section__heading heading-1">Доставка</h1>
 					</div>
-					<ul class="blog-article__tags">
-						<li class="blog-article__tag">Тег №1</li>
-						<li class="blog-article__tag">Тег №2</li>
-						<li class="blog-article__tag">Тег №3</li>
-						<li class="blog-article__tag">Тег №4</li>
-						<li class="blog-article__tag">Тег №5</li>
-					</ul>
-					<div class="blog-article__share">
-						<p class="blog-article__share-text">поделиться статьей</p>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-vk.svg" />
+					<div class="delivery-section__grid">
+						<div class="delivery-section__card">
+							<svg class="delivery-section__card-icon">
+								<use href="./assets/icons/icon-truck-1.svg" />
 							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-tg.svg" />
+							<h4 class="delivery-section__card-heading">Условия и стоимость доставки по Москве и Московской области</h4>
+							<p>
+								Доставка осуществляется по средствам транспортных компании 24 ч в сутки. Рассчитывается индивидуально, согласно объему изделий мебели и удалённости
+								от производства. Загрузка/разгрузка мебели входит в цену доставки.
+							</p>
+						</div>
+						<div class="delivery-section__card">
+							<svg class="delivery-section__card-icon">
+								<use href="./assets/icons/icon-truck-2.svg" />
 							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-copy.svg" />
+							<h4 class="delivery-section__card-heading">Условия и стоимость доставки в любой регион России (кроме Москвы и Московской области):</h4>
+							<p>
+								Доставка осуществляется по средствам логистических компании 24 ч. Рассчитывается индивидуально, согласно объему изделий мебели и удалённости от
+								производства. Загрузка/разгрузка мебели входит в цену доставки.
+							</p>
+						</div>
+						<div class="delivery-section__card">
+							<svg class="delivery-section__card-icon" style="fill: none; stroke: currentColor;">
+								<use href="./assets/icons/icon-delivery.svg" />
 							</svg>
-						</a>
+							<h4 class="delivery-section__card-heading">Самовывоз</h4>
+							<p>
+								Осуществляется заказчиком 24 часа в сутки в заранее согласованное время
+							</p>
+						</div>
 					</div>
 				</div>
-			</article>
+			</section>
 
 			<!-- Форма обратной связи -->
 			<section class="callback-section no-margin-bottom">
