--- a/src/materials-single.html
+++ b/src/materials-single.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Статья</title>
+	<title>Материалы</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -115,71 +115,45 @@
 
 		<ul class="bread-crumbs container">
 			<li><a href="/">Главная</a></li>
-			<li><a href="/">Блог</a></li>
-			<li>Выбор идеального офисного кресла: На что обратить внимание?</li>
+			<li><a href="/">Материалы</a></li>
+			<li>ЛДСП Egger</li>
 		</ul>
 
 		<main class="main">
-			<article class="blog-article">
-				<div class="blog-article__container container">
-					<h1 class="blog-article__heading heading-1">Выбор идеального офисного кресла: На что обратить внимание?</h1>
-					<img class="blog-article__image" src="./assets/images/service-image-1.jpg" alt="">
-					<span class="blog-article__date">21.09.2024</span>
-					<div class="blog-article__text">
-						<h2>первый шаг</h2>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-						<h3>Второй шаг</h3>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-					</div>
-					<ul class="blog-article__tags">
-						<li class="blog-article__tag">Тег №1</li>
-						<li class="blog-article__tag">Тег №2</li>
-						<li class="blog-article__tag">Тег №3</li>
-						<li class="blog-article__tag">Тег №4</li>
-						<li class="blog-article__tag">Тег №5</li>
-					</ul>
-					<div class="blog-article__share">
-						<p class="blog-article__share-text">поделиться статьей</p>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-vk.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-tg.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-copy.svg" />
-							</svg>
-						</a>
+			<!-- Направление -->
+			<section class="materials-single-section">
+				<div class="materials-single-section__container container">
+					<div class="materials-single-section__body">
+						<img class="materials-single-section__image" src="./assets/images/about-2.jpg" alt="">
+						<div class="materials-single-section__content">
+							<div class="materials-single-section__text">
+								<h1>ЛДСП Egger</h1>
+								<p>
+									Ламинированная древесно-стружечная плита (ЛДСП) от компании Egger – это высококачественный материал, широко используемый в мебельной
+									промышленности и строительстве. Компания Egger, основанная в Австрии в 1961 году, является одним из ведущих производителей древесных материалов
+									в Европе.
+								</p>
+								<h3>Основные характеристики ЛДСП Egger:</h3>
+								<ol>
+									<li>
+										Высокое качество поверхности: Плиты Egger покрыты специальной меламиновой пленкой, которая обеспечивает устойчивость к механическим
+										повреждениям, влаге и воздействию химических веществ. Это делает их идеальными для использования в кухонных гарнитурах, офисной мебели и
+										других помещениях с высокой нагрузкой.
+									</li>
+									<li>Широкий ассортимент декоров: Egger предлагает огромное разнообразие дизайнов и текстур, включая имитацию дерева, камня, металла и однотонные
+										цвета. Это позволяет подобрать плиты под любой интерьерный стиль.
+									</li>
+									<li>
+										Экологическая безопасность: Продукция Egger соответствует строгим европейским стандартам по содержанию формальдегида (класс E1), что
+										гарантирует безопасность материала для здоровья человека.
+									</li>
+								</ol>
+							</div>
+							<button class="button">оформить заказ</button>
+						</div>
 					</div>
 				</div>
-			</article>
+			</section>
 
 			<!-- Форма обратной связи -->
 			<section class="callback-section no-margin-bottom">
