--- a/src/materials.html
+++ b/src/materials.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Статья</title>
+	<title>Материалы</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -115,71 +115,87 @@
 
 		<ul class="bread-crumbs container">
 			<li><a href="/">Главная</a></li>
-			<li><a href="/">Блог</a></li>
-			<li>Выбор идеального офисного кресла: На что обратить внимание?</li>
+			<li>Материалы</li>
 		</ul>
 
 		<main class="main">
-			<article class="blog-article">
-				<div class="blog-article__container container">
-					<h1 class="blog-article__heading heading-1">Выбор идеального офисного кресла: На что обратить внимание?</h1>
-					<img class="blog-article__image" src="./assets/images/service-image-1.jpg" alt="">
-					<span class="blog-article__date">21.09.2024</span>
-					<div class="blog-article__text">
-						<h2>первый шаг</h2>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-						<h3>Второй шаг</h3>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
+			<!-- Материалы -->
+			<section class="materials-section">
+				<div class="materials-section__container container">
+					<div class="materials-section__head">
+						<h1 class="materials-section__heading heading-1">Материалы</h1>
 					</div>
-					<ul class="blog-article__tags">
-						<li class="blog-article__tag">Тег №1</li>
-						<li class="blog-article__tag">Тег №2</li>
-						<li class="blog-article__tag">Тег №3</li>
-						<li class="blog-article__tag">Тег №4</li>
-						<li class="blog-article__tag">Тег №5</li>
-					</ul>
-					<div class="blog-article__share">
-						<p class="blog-article__share-text">поделиться статьей</p>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-vk.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-tg.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-copy.svg" />
-							</svg>
-						</a>
+					<div class="materials-section__body">
+						<ul class="materials-section__menu">
+							<li><a class="materials-section__menu-link button button--outline is-active" href="">Все</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Алюминий</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Лакобель</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">ЛДСП</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">МДФ</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Оргстекло</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Пластик</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Пленка Oracal</a></li>
+							<li><a class="materials-section__menu-link button button--outline" href="">Стекло</a></li>
+						</ul>
+						<ul class="materials-section__grid">
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-1.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-2.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-3.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-4.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-5.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-6.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-7.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-8.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+							<li>
+								<a class="materials-section__card" href="#">
+									<img class="materials-section__card-image" src="./assets/images/materials-9.jpg" alt="">
+									<span class="materials-section__card-name">ЛДСП Egger</span>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
-			</article>
+			</section>
 
 			<!-- Форма обратной связи -->
 			<section class="callback-section no-margin-bottom">
