--- a/src/payment.html
+++ b/src/payment.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Статья</title>
+	<title>Оплата</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -115,71 +115,39 @@
 
 		<ul class="bread-crumbs container">
 			<li><a href="/">Главная</a></li>
-			<li><a href="/">Блог</a></li>
-			<li>Выбор идеального офисного кресла: На что обратить внимание?</li>
+			<li>Оплата</li>
 		</ul>
 
 		<main class="main">
-			<article class="blog-article">
-				<div class="blog-article__container container">
-					<h1 class="blog-article__heading heading-1">Выбор идеального офисного кресла: На что обратить внимание?</h1>
-					<img class="blog-article__image" src="./assets/images/service-image-1.jpg" alt="">
-					<span class="blog-article__date">21.09.2024</span>
-					<div class="blog-article__text">
-						<h2>первый шаг</h2>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-						<h3>Второй шаг</h3>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
+			<!-- Оплата -->
+			<section class="payment-section">
+				<div class="payment-section__container container">
+					<div class="payment-section__head">
+						<h1 class="payment-section__heading heading-1">Оплата</h1>
 					</div>
-					<ul class="blog-article__tags">
-						<li class="blog-article__tag">Тег №1</li>
-						<li class="blog-article__tag">Тег №2</li>
-						<li class="blog-article__tag">Тег №3</li>
-						<li class="blog-article__tag">Тег №4</li>
-						<li class="blog-article__tag">Тег №5</li>
-					</ul>
-					<div class="blog-article__share">
-						<p class="blog-article__share-text">поделиться статьей</p>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-vk.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-tg.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-copy.svg" />
-							</svg>
-						</a>
+					<div class="payment-section__body">
+						<p class="payment-section__description">
+							Оплата заказа производится по счету на основании договора по изготовлению мебели: 70% оплачивается как аванс, оставшиеся 30% оплачивается перед
+							отгрузкой заказа.
+						</p>
+						<h2 class="payment-section__subtitle heading-3">Стоимость монтажа мебели</h2>
+						<div class="payment-section__grid">
+							<div class="payment-section__card payment-section__card--green">
+								<h3 class="payment-section__card-heading heading-4">10% от стоимости заказа</h3>
+								<p>если сумма <strong>до</strong> 1 000 000 рублей</p>
+							</div>
+							<div class="payment-section__card payment-section__card--primary">
+								<h3 class="payment-section__card-heading heading-4">8% от стоимости заказа</h3>
+								<p>если сумма <string>более</string> 1 000 000 рублей</p>
+							</div>
+							<div class="payment-section__card payment-section__card--secondary">
+								<h3 class="payment-section__card-heading heading-4">минимальная стоимость</h3>
+								<p>монтажа <strong>при выезде монтажников</strong> на место сборки 12 500 рублей;</p>
+							</div>
+						</div>
 					</div>
 				</div>
-			</article>
+			</section>
 
 			<!-- Форма обратной связи -->
 			<section class="callback-section no-margin-bottom">
