--- a/src/index.html
+++ b/src/index.html
@@ -307,8 +307,8 @@
 					<div class="cases-section__body splide__track">
 						<div class="cases-section__grid splide__list">
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-1.jpg" alt="">
-								<h3 class="case-card__heading heading-4">Вино и Виски очень большое название в 2 строки</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-1.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">Вино и Виски очень большое название в 2 строки</a>
 								<p class="case-card__address">Кутузовский проспект</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
@@ -318,8 +318,8 @@
 								</ul>
 							</div>
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-2.jpg" alt="">
-								<h3 class="case-card__heading heading-4">WineStyle</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-2.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">WineStyle</a>
 								<p class="case-card__address">Монетчиковский пер., 79, Москва</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
@@ -329,8 +329,8 @@
 								</ul>
 							</div>
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-3.jpg" alt="">
-								<h3 class="case-card__heading heading-4">Пекарня Ватруш</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-3.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">Пекарня Ватруш</a>
 								<p class="case-card__address">г. Клин</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
@@ -340,8 +340,8 @@
 								</ul>
 							</div>
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-4.jpg" alt="">
-								<h3 class="case-card__heading heading-4">Пекарня Ватруш</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-4.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">Пекарня Ватруш</a>
 								<p class="case-card__address">г. Зеленоград</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
@@ -351,8 +351,8 @@
 								</ul>
 							</div>
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-5.jpg" alt="">
-								<h3 class="case-card__heading heading-4">Кофейня Выдра такое же большое название в 2 строки</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-5.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">Кофейня Выдра такое же большое название в 2 строки</a>
 								<p class="case-card__address">Монетчиковский пер., 79, Москва</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
@@ -362,8 +362,8 @@
 								</ul>
 							</div>
 							<div class="cases-section__slide case-card splide__slide">
-								<img class="case-card__image" src="./assets/images/case-6.jpg" alt="">
-								<h3 class="case-card__heading heading-4">WineStyle Рокоссовского</h3>
+								<a href="#"><img class="case-card__image" src="./assets/images/case-6.jpg" alt=""></a>
+								<a class="case-card__heading heading-4" href="#">WineStyle Рокоссовского</a>
 								<p class="case-card__address">Монетчиковский пер., 79, Москва</p>
 								<ul class="case-card__tags">
 									<li class="case-card__tag">100 тыс. рублей</li>
