--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Статья</title>
+	<title>Политика конфиденциальности</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -115,89 +115,57 @@
 
 		<ul class="bread-crumbs container">
 			<li><a href="/">Главная</a></li>
-			<li><a href="/">Блог</a></li>
-			<li>Выбор идеального офисного кресла: На что обратить внимание?</li>
+			<li>Политика конфиденциальности</li>
 		</ul>
 
 		<main class="main">
-			<article class="blog-article">
-				<div class="blog-article__container container">
-					<h1 class="blog-article__heading heading-1">Выбор идеального офисного кресла: На что обратить внимание?</h1>
-					<img class="blog-article__image" src="./assets/images/service-image-1.jpg" alt="">
-					<span class="blog-article__date">21.09.2024</span>
-					<div class="blog-article__text">
-						<h2>первый шаг</h2>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-						<h3>Второй шаг</h3>
-						<p>
-							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В нашем
-							ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам удовлетворять самые
-							разнообразные потребности наших клиентов.
-						</p>
-						<p>
-							Кроме того, мы предлагаем услуги по доставке и сборке мебели, а также консультационные услуги по планированию рабочего пространства. Наша команда
-							профессионалов всегда готова помочь вам выбрать оптимальное решение для вашего офиса.
-						</p>
-						<p>
-							Выбирая продукцию, вы выбираете качество, надежность и удобство. Мы уверены, что наша мебель станет неотъемлемой частью вашего успешного бизнеса!
-						</p>
-					</div>
-					<ul class="blog-article__tags">
-						<li class="blog-article__tag">Тег №1</li>
-						<li class="blog-article__tag">Тег №2</li>
-						<li class="blog-article__tag">Тег №3</li>
-						<li class="blog-article__tag">Тег №4</li>
-						<li class="blog-article__tag">Тег №5</li>
-					</ul>
-					<div class="blog-article__share">
-						<p class="blog-article__share-text">поделиться статьей</p>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-vk.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-tg.svg" />
-							</svg>
-						</a>
-						<a class="blog-article__share-link" href="#">
-							<svg class="blog-article__share-icon">
-								<use href="./assets/icons/icon-copy.svg" />
-							</svg>
-						</a>
-					</div>
+			<article class="article">
+				<div class="article__container container">
+					<h1>политика конфиденциальности</h1>
+					<h3>1. ОБЩИЕ ПОЛОЖЕНИЯ</h3>
+					<p>1.1. В рамках настоящей Политики под персональной информацией Пользователя понимаются:</p>
+					<p>
+						1.1.1. Персональная информация, которую Пользователь предоставляет о себе
+						самостоятельно в процессе использования сервисов, включая персональные данные
+						Пользователя. Обязательная для предоставления сервисов информация помечена
+						специальным образом.
+					</p>
+					<p>
+						1.1.2. Данные, которые автоматически передаются сервисам Сайта в процессе их
+						использования с помощью установленного на устройстве Пользователя программного
+						обеспечения, в том числе IP-адрес, данные файлов cookie, информация о браузере
+						Пользователя (или иной программе, с помощью которой осуществляется доступ к
+						сервисам), технические характеристики оборудования и программного обеспечения,
+						используемых Пользователем, дата и время доступа к сервисам, адреса
+						запрашиваемых страниц и иная подобная информация.
+					</p>
+					<p>
+						1.1.3. Настоящая Политика конфиденциальности применяется только к Сайту https://detalidom.ru/. Сайт https://detali-dom.ru/ не контролирует и не несет
+						ответственности за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на Сайте
+					</p>
+					<h3>2. ЦЕЛИ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЕЙм</h3>
+					<p>1.1. В рамках настоящей Политики под персональной информацией Пользователя понимаются:</p>
+					<p>
+						1.1.1. Персональная информация, которую Пользователь предоставляет о себе
+						самостоятельно в процессе использования сервисов, включая персональные данные
+						Пользователя. Обязательная для предоставления сервисов информация помечена
+						специальным образом.
+					</p>
+					<p>
+						1.1.2. Данные, которые автоматически передаются сервисам Сайта в процессе их
+						использования с помощью установленного на устройстве Пользователя программного
+						обеспечения, в том числе IP-адрес, данные файлов cookie, информация о браузере
+						Пользователя (или иной программе, с помощью которой осуществляется доступ к
+						сервисам), технические характеристики оборудования и программного обеспечения,
+						используемых Пользователем, дата и время доступа к сервисам, адреса
+						запрашиваемых страниц и иная подобная информация.
+					</p>
+					<p>
+						1.1.3. Настоящая Политика конфиденциальности применяется только к Сайту https://detalidom.ru/. Сайт https://detali-dom.ru/ не контролирует и не несет
+						ответственности за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на Сайте
+					</p>
 				</div>
 			</article>
-
-			<!-- Форма обратной связи -->
-			<section class="callback-section no-margin-bottom">
-				<div class="callback-section__container container">
-					<form class="callback-section__form callback-form" action="#">
-						<h2 class="callback-form__heading heading-3">Получите экологичную офисную мебель всего за 10 дней</h2>
-						<p class="callback-form__description">
-							Мы используем только сертифицированные материалы и инновационные технологии, чтобы создать идеальное рабочее пространство для вашего бизнеса.
-						</p>
-						<div class="callback-form__body">
-							<input class="callback-form__input input" type="text" name="name" placeholder="Введите имя" required>
-							<input class="callback-form__input input" type="tel" name="phone" placeholder="Введите телефон" required>
-							<button class="callback-form__button button" type="submit">Отправить заявку</button>
-						</div>
-						<p class="callback-form__agreement">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных данных</a></p>
-					</form>
-				</div>
-			</section>
 		</main>
 
 		<footer class="footer">
