--- a/src/directions.html
+++ b/src/directions.html
@@ -40,13 +40,13 @@
 				</div>
 				<nav class="header__menu">
 					<ul class="header__menu-list">
-						<li><a class="header__menu-link" href="#">О компании</a></li>
-						<li><a class="header__menu-link" href="#">Направления</a></li>
-						<li><a class="header__menu-link" href="#">Блог</a></li>
-						<li><a class="header__menu-link" href="#">Контакты</a></li>
-						<li><a class="header__menu-link" href="#">Оплата</a></li>
-						<li><a class="header__menu-link" href="#">Доставка</a></li>
-						<li><a class="header__menu-link" href="#">Материалы</a></li>
+						<li><a class="header__menu-link" href="./about.html">О компании</a></li>
+						<li><a class="header__menu-link" href="./directions.html">Направления</a></li>
+						<li><a class="header__menu-link" href="./blog.html">Блог</a></li>
+						<li><a class="header__menu-link" href="./contacts.html">Контакты</a></li>
+						<li><a class="header__menu-link" href="./payment.html">Оплата</a></li>
+						<li><a class="header__menu-link" href="./delivery.html">Доставка</a></li>
+						<li><a class="header__menu-link" href="./materials.html">Материалы</a></li>
 					</ul>
 				</nav>
 				<ul class="header__contacts">
@@ -64,7 +64,7 @@
 					</li>
 				</ul>
 				<div class="header__callback">
-					<button class="button button--outline">Обратный звонок</button>
+					<button class="button button--outline js-popup-button" data-popup-open="popup-callback">Обратный звонок</button>
 				</div>
 				<div class="header__burger">
 					<button class="burger js-navbar-button" data-navbar-action="open">
@@ -93,13 +93,13 @@
 				<div class=" navbar__body">
 					<div class="navbar__menu">
 						<ul class="navbar__menu-list">
-							<li><a class="navbar__menu-link" href="#">О компании</a></li>
-							<li><a class="navbar__menu-link" href="#">Направления</a></li>
-							<li><a class="navbar__menu-link" href="#">Блог</a></li>
-							<li><a class="navbar__menu-link" href="#">Контакты</a></li>
-							<li><a class="navbar__menu-link" href="#">Оплата</a></li>
-							<li><a class="navbar__menu-link" href="#">Доставка</a></li>
-							<li><a class="navbar__menu-link" href="#">Материалы</a></li>
+							<li><a class="navbar__menu-link" href="./about.html">О компании</a></li>
+							<li><a class="navbar__menu-link" href="./directions.html">Направления</a></li>
+							<li><a class="navbar__menu-link" href="./blog.html">Блог</a></li>
+							<li><a class="navbar__menu-link" href="./contacts.html">Контакты</a></li>
+							<li><a class="navbar__menu-link" href="./payment.html">Оплата</a></li>
+							<li><a class="navbar__menu-link" href="./delivery.html">Доставка</a></li>
+							<li><a class="navbar__menu-link" href="./materials.html">Материалы</a></li>
 						</ul>
 					</div>
 					<div class="navbar__foot">
@@ -107,7 +107,7 @@
 							<li><a class="navbar__contacts-link" href="tel:+79120082023">+7 (912) 008-20-26</a></li>
 							<li><a class="navbar__contacts-link" href="mailto:gmail@yandex.com">gmail@yandex.com</a></li>
 						</ul>
-						<button class="navbar__button-call button button--outline">Обратный звонок</button>
+						<button class="navbar__button-call button button--outline js-popup-button" data-popup-open="popup-callback">Обратный звонок</button>
 					</div>
 				</div>
 			</div>
@@ -519,6 +519,22 @@
 				</div>
 			</div>
 		</footer>
+	</div>
+
+	<div class="popup js-popup" id="popup-callback">
+		<div class="popup__dialog">
+			<button class="popup__close js-popup-button" data-popup-close>
+				<span></span>
+				<span></span>
+			</button>
+			<h3 class="popup__heading heading-3">Оставьте заявку, заполнив форму обратной связи</h3>
+			<form class="popup__form" action="#">
+				<input class="popup__input input" type="text" name="name" required placeholder="Введите имя">
+				<input class="popup__input input" type="tel" name="phone" required placeholder="Введите телефон">
+				<button class="popup__button button">Отправить заявку</button>
+			</form>
+			<p class="popup__agreement">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных данных</a></p>
+		</div>
 	</div>
 </body>
 
