--- a/src/materials.html
+++ b/src/materials.html
@@ -36,7 +36,10 @@
 		<header class="header">
 			<div class="header__container container">
 				<div class="header__logo">
-					<a class="site-logo" href="/">Логотип</a>
+					<a class="site-logo" href="/">
+						<img src="./assets/images/logo.svg" alt="Логотип">
+						<span>MDB Company - Офисная мебель</span>
+					</a>
 				</div>
 				<nav class="header__menu">
 					<ul class="header__menu-list">
@@ -80,7 +83,10 @@
 			<div class="navbar__container container">
 				<div class="navbar__head">
 					<div class="navbar__logo">
-						<a class="site-logo" href="/">Логотип</a>
+						<a class="site-logo" href="/">
+							<img src="./assets/images/logo.svg" alt="Логотип">
+							<span>MDB Company - Офисная мебель</span>
+						</a>
 					</div>
 					<div class="navbar__burger">
 						<button class="burger js-navbar-button" data-navbar-action="close">
@@ -221,7 +227,10 @@
 				<div class="footer__row">
 					<div class="footer__info">
 						<div class="footer__info-logo">
-							<a class="site-logo" href="/">Логотип</a>
+							<a class="site-logo" href="/">
+								<img src="./assets/images/logo.svg" alt="Логотип">
+								<span>MDB Company - Офисная мебель</span>
+							</a>
 						</div>
 						<p class="footer__info-text">Экологичная <br>офисная мебель на заказ</p>
 					</div>
